--- a/functions.html
+++ b/functions.html
@@ -142,9 +142,473 @@
     function concStr(s, x) {
       var result = "";
       for (var l = 0; l < x; l++) result += s;
-      return result;
+      console.log(result);
     }
 
-    console.log(concStr("abc", 4));
+    concStr("abc", 4);
+
+    // EXERCISE 2
+    console.log("__________________");
+    console.log("EXERCISE 2");
+    console.log("__________________");
+    //  1. Write a function to check whether the `input` is a string or not.
+    // "My random string" -> true
+    // 12 -> false
+    function checkString(p) {
+      if (typeof p === "string") {
+        console.log("True: Input is string.");
+      } else {
+        console.log("False: Not string.");
+      }
+    }
+    checkString("random");
+
+    // 2. Write a function to check whether a string is blank or not.
+    // "My random string" -> false
+    // " " -> true
+    // 12 -> false
+    // false -> false
+    function checkEmpty(p) {
+      if (p === "") {
+        console.log("True: String is empty.");
+      } else {
+        console.log("False: Not empty string.");
+      }
+    }
+    checkEmpty("");
+
+    // 3. Write a function that concatenates a given string n times (default is 1).
+    // "Ha" -> "Ha"
+    // "Ha", 3 -> "HaHaHa"
+    function concString(p, x = 1) {
+      var result = "";
+      for (var l = 0; l < x; l++) result += p;
+      console.log(result);
+    }
+    concString("Ha", 5);
+
+    // 4. Write a function to count the number of letter occurrences in a string.
+    // "My random string", "n" -> 2
+    function countLetters(string, letter) {
+      var counter = 0;
+      for (var i = 0; i < string.length; i++) {
+        if (string[i] === letter) counter++;
+      }
+      console.log(
+        "Number of letter " +
+          letter +
+          " in string '" +
+          string +
+          "' is " +
+          counter
+      );
+    }
+    countLetters("My random strinnng", "n");
+
+    // 5. Write a function to find the position of the first occurrence of a character in a string.
+    // The result should be the position of character.
+    // If there are no occurrences of the character, the function should return -1.
+    function findIndex(string, letter) {
+      var index = 0;
+
+      for (var i = 0; i < string.length; i++) {
+        if (string[i] === letter) {
+          index = i;
+          break;
+        } else {
+          index = -1;
+        }
+      }
+
+      console.log(index);
+    }
+
+    findIndex("My random strinnng", "y");
+
+    // 6. Write a function to find the position of the last occurrence of a character in a string.
+    // The result should be in human numeration form. If there are no occurrences of the character,
+    // function should return -1.
+    function findLastIndex(string, char) {
+      var index = 0;
+
+      for (var i = string.length - 1; i >= 0; i--) {
+        if (string[i] === char) {
+          index = i + 1;
+          break;
+        } else {
+          index = -1;
+        }
+      }
+
+      console.log(index);
+    }
+
+    findLastIndex("My random string", "C");
+
+    // 7. Write a functi  on to convert string into an array.
+    // Space in a string should be represented as “null” in new array.
+    // "My random string" -> ["M", "y", null, "r", "a"]
+    // "Random" -> ["R", "a", "n", "d", "o", "m"]
+    function convertIntoArr(string) {
+      var arr = [];
+
+      for (var i = 0; i < string.length; i++) {
+        if (string[i] === " ") {
+          arr[i] = null;
+        } else {
+          arr[i] = string[i];
+        }
+      }
+
+      console.log(arr);
+    }
+    convertIntoArr("My random string");
+
+    // 8. Write a function that accepts a number as a parameter and checks if the number is prime or not.
+    // Note: A prime number (or a prime) is a natural number greater than 1 that has no positive divisors other than 1 and itself.
+    function isPrimeNum(num) {
+      var result = "";
+
+      if (num <= 1) {
+        result = num + " is NOT prime";
+      } else if (num === 2) {
+        result = num + " is prime";
+      } else {
+        for (var i = 2; i < num; i++) {
+          if (num % i === 0) {
+            result = num + " is NOT prime";
+            break;
+          } else {
+            result = num + " is prime";
+          }
+        }
+      }
+
+      return console.log(result);
+    }
+    isPrimeNum(5);
+
+    // 9. Write a function that replaces spaces in a string with provided separator.
+    // If separator is not provided, use “-” (dash) as the default separator.
+    // "My random string", "_" -> "My_random_string"
+    // "My random string", "+" -> "My+random+string"
+    // "My random string" -> "My-random-string"
+    function replaceSpaces(string, sep = "-") {
+      var result = "";
+
+      for (var i = 0; i < string.length; i++) {
+        if (string[i] === " ") {
+          result += sep;
+        } else {
+          result += string[i];
+        }
+      }
+
+      console.log(result);
+    }
+
+    replaceSpaces("My random string", "_");
+
+    // 10. Write a function to get the first n characters and add “...” at the end of newly created string.
+    function getFirstChars(string, num) {
+      var result = "";
+
+      for (var i = 0; i < num; i++) {
+        result += string[i];
+      }
+
+      result += "...";
+
+      console.log(result);
+    }
+    getFirstChars("My random string", 5);
+
+    // 11. Write a function that converts an array of strings into an array of numbers.
+    // Filter out all non-numeric values.
+    // ["1", "21", undefined, "42", "1e+3", Infinity] -> [1, 21, 42, 1000]
+    function toNumArray(arr) {
+      var result = [];
+      var counter = 0;
+
+      for (var i = 0; i < arr.length; i++) {
+        if (arr[i] === null) {
+          continue;
+        } else if (isNaN(arr[i])) {
+          continue;
+        } else if (arr[i] === undefined) {
+          continue;
+        } else if (arr[i] === Infinity) {
+          continue;
+        } else {
+          result[counter] = +arr[i];
+          counter++;
+        }
+      }
+      console.log(result);
+    }
+
+    toNumArray(["1", "21", undefined, null, "42", "1e+3", Infinity]);
+
+    // 12. Write a function to calculate how many years there are left until retirement based on the year of birth.
+    // Retirement for men is at age of 65 and for women at age of 60. If someone is already retired, a proper message should be displayed.
+    function yearsUntilRetire(yearOfBirth, sex) {
+      var result = "";
+      var age = 2022 - yearOfBirth;
+
+      if (sex === "men") {
+        if (age < 65) {
+          result = "Years until retirement: " + (65 - age);
+        } else {
+          result = "Already retired";
+        }
+      }
+
+      if (sex === "women") {
+        if (age < 60) {
+          result = "Years until retirement: " + (60 - age);
+        } else {
+          result = "Already retired";
+        }
+      }
+
+      console.log(result);
+    }
+    yearsUntilRetire(1985, "women");
+
+    // 13. Write a function to humanize a number (formats a number to a human-readable string)
+    // with the correct suffix such as 1st, 2nd, 3rd or 4th.
+    // 1 -> 1st
+    // 11 -> 11th
+    function humanizeNum(num) {
+      var result = "";
+
+      var first10 = num % 10;
+      var others = num % 100;
+
+      if (first10 === 1 && others !== 11) {
+        result = num + "st";
+      } else if (first10 === 2 && others !== 12) {
+        result = num + "nd";
+      } else if (first10 === 3 && others !== 13) {
+        result = num + "rd";
+      } else {
+        result = num + "th";
+      }
+      console.log(result);
+    }
+
+    humanizeNum(11);
+    // EXERCISE 3
+    console.log("__________________");
+    console.log("EXERCISE 3");
+    console.log("__________________");
+
+    // 1. Write a program to insert a string within a string at a particular position (default is 1, beginning of a string).
+    // "My random string", "JS " -> "JS My random string"
+    // "My random string", "JS ", 10 -> "My random JS string"
+
+    function insertStr(a, b, num = 0) {
+      var result = "";
+      var result2 = "";
+
+      for (var i = 0; i < num; i++) {
+        result += a[i];
+      }
+      for (var j = num; j < a.length; j++) {
+        result2 += a[j];
+      }
+      result = result + b + result2;
+
+      console.log(result);
+    }
+    insertStr("My random string", "JS ", 10);
+
+    // 2. Write a program to join all elements of the array into a string skipping elements that are undefined, null, NaN or Infinity.
+    // [NaN, 0, 15, false, -22, '', undefined, 47, null]
+    function joinInStr(arr) {
+      var result = "";
+
+      for (var i = 0; i < arr.length; i++) {
+        if (arr[i] === null) {
+          continue;
+        } else if (isNaN(arr[i])) {
+          continue;
+        } else if (arr[i] === undefined) {
+          continue;
+        } else if (arr[i] === Infinity) {
+          continue;
+        } else {
+          result += arr[i];
+        }
+      }
+
+      console.log(result);
+    }
+
+    joinInStr([NaN, 0, 15, false, -22, "", undefined, 47, null]);
+
+    // 3. Write a program to filter out falsy values from the array.
+    // [NaN, 0, 15, false, -22, '', undefined, 47, null] -> [15, -22, 47]
+    function filterFalsy(arr) {
+      var result = [];
+      var j = 0;
+      for (var i = 0; i < arr.length; i++) {
+        if (arr[i]) {
+          result[j] = arr[i];
+          j++;
+        }
+      }
+
+      console.log(result);
+    }
+    filterFalsy([NaN, 0, 15, false, -22, "", undefined, 47, null]);
+
+    // 4. Write a function that reverses a number. The result must be a number.
+    // 12345 -> 54321 // Output must be a number
+    function reverseNum(n) {
+      var nToString = "" + n;
+      var result = "";
+
+      for (var i = nToString.length - 1; i >= 0; i--) {
+        result += nToString[i];
+      }
+
+      result = +result;
+
+      console.log(result);
+    }
+
+    reverseNum(1234567);
+
+    // 5. Write a function to get the last element of an array.
+    // Passing a parameter 'n' will return the  last 'n' elements of the array.
+    // [7, 9, 0, -2] -> -2
+    // 4
+    // [7, 9, 0, -2], 2 -> [0, -2]
+
+    function getLastEl(arr, n) {
+      var result = [];
+      var j = 0;
+
+      if (typeof n === "undefined") {
+        result = arr[arr.length - 1];
+      } else {
+        for (var i = arr.length - n; i < arr.length; i++) {
+          result[j] = arr[i];
+          j++;
+        }
+      }
+
+      console.log(result);
+    }
+
+    getLastEl([7, 9, 0, -2], 3);
+
+    // 6. Write a function to create a specified number of elements with pre-filled numeric value array.
+    // 6, 0 -> [0, 0, 0, 0, 0, 0]
+    // 2, "none" -> ["none", "none"]
+    // 2 -> [null, null]
+
+    function createPreFill(n, el = null) {
+      var result = [];
+
+      for (var i = 0; i < n; i++) {
+        result[i] = el;
+      }
+
+      console.log(result);
+    }
+    createPreFill(2, "none");
+
+    // 7. Write a function that says whether a number is perfect.
+    // 28 -> 28 is a perfect number.
+    // Note: According to Wikipedia: In number theory, a perfect number is a positive integer that is equal to the sum
+    // of its proper positive divisors, that is, the sum of its positive divisors excluding the number itself (also known
+    // as its aliquot sum). Equivalently, a perfect number is a number that is half the sum of all of its positive divisors
+    // (including itself).
+    // E.g.: The first perfect number is 6, because 1, 2 and 3 are its proper positive divisors, and 1 + 2 + 3 = 6.
+    // Equivalently, the number 6 is equal to half the sum of all its positive divisors: (1 + 2 + 3 + 6) / 2 = 6. The next
+    // perfect number is 28 = 1 + 2 + 4 + 7 + 14. This is followed by the perfect numbers 496 and 8128.
+    function isPerfect(num) {
+      var result = "";
+      var sum = 0;
+
+      for (var i = 1; i < num; i++) {
+        if (num % i === 0) {
+          sum += i;
+        }
+      }
+
+      result =
+        sum === num
+          ? num + " is a perfect number."
+          : num + " is NOT a perfect number.";
+
+      console.log(result);
+    }
+
+    isPerfect(28);
+    // 8. Write a function to find a word within a string.
+    // 'The quick brown fox', 'fox' -> "'fox' was found 1 times"
+    // 'aa bb cc dd aa', 'aa' -> "'aa' was found 2 times"
+    function findStr(string, word) {
+      var result = "";
+      var counter = 0;
+
+      for (var i = 0; i < string.length; i++) {}
+
+      console.log(result);
+    }
+
+    findStr("The quick brown fox", "fox");
+
+    // 9. Write a function to hide email address.
+    // "myemailaddress@bgit.rs" -> "mye...@bgit.rs"
+    function hideEmail(email) {
+      var result = "";
+      var indexOfAt = 0;
+
+      for (var i = 0; i < email.length; i++) {
+        if (email[i] === "@") {
+          indexOfAt = i;
+        }
+      }
+
+      for (var j = 0; j < email.length; j++) {
+        if (j > 2 && j < indexOfAt) {
+          result += "*";
+        } else {
+          result += email[j];
+        }
+      }
+
+      console.log(result);
+    }
+    hideEmail("myemailaddress@bgit.rs");
+
+    // 10. Write a program to find the most frequent item of an array.
+    // [3, 'a', 'a', 'a', 2, 3, 'a', 3, 'a', 2, 4, 9, 3]
+    function findMostFrequent(arr) {
+      var mostFreq = 1;
+      var counter = 0;
+      var item = "";
+
+      for (var i = 0; i < arr.length; i++) {
+        for (var j = i; j < arr.length; j++) {
+          if (arr[i] === arr[j]) {
+            counter++;
+          }
+
+          if (mostFreq < counter) {
+            mostF = counter;
+            item = arr[i];
+          }
+        }
+
+        counter = 0;
+      }
+      console.log(mostFreq + item);
+    }
+    findMostFrequent([3, "a", "a", "a", 2, 3, "a", 3, "a", 2, 4, 9, 3]);
   </script>
 </html>
