--- a/functions.html
+++ b/functions.html
@@ -398,6 +398,7 @@
     }
 
     humanizeNum(11);
+
     // EXERCISE 3
     console.log("__________________");
     console.log("EXERCISE 3");
@@ -610,5 +611,208 @@
       console.log(mostFreq + item);
     }
     findMostFrequent([3, "a", "a", "a", 2, 3, "a", 3, "a", 2, 4, 9, 3]);
+
+    // EXERCISE 4
+    console.log("__________________");
+    console.log("EXERCISE 4");
+    console.log("__________________");
+
+    // 1. Write a program that checks if a given element e is in the array a.
+    // Input: e = 3, a = [5, -4.2, 3, 7]
+    // Output: yes
+    // Input: e = 3, a = [5, -4.2, 18, 7]
+    // Output: no
+    function checkExists(el, arr) {
+      var result = "";
+      for (var i = 0; i < arr.length; i++) {
+        if (el === arr[i]) {
+          result = "yes";
+          break;
+        } else {
+          result = "no";
+        }
+      }
+      console.log(result);
+    }
+
+    checkExists(3, [5, -4.2, 3, 7]);
+
+    // 2. Write a program that multiplies every positive element of a given array by 2.
+    // Input array: [-3, 11, 5, 3.4, -8]
+    // Output array: [-3, 22, 10, 6.8, -8]
+    function multiplyPositive(arr) {
+      var result = [];
+
+      for (var i = 0; i < arr.length; i++) {
+        if (arr[i] > 0) {
+          result[i] = arr[i] * 2;
+        } else {
+          result[i] = arr[i];
+        }
+      }
+      console.log(result);
+    }
+
+    multiplyPositive([-3, 11, 5, 3.4, -8]);
+
+    // 3. Write a program that finds the minimum of a given array and prints out its value and index.
+    // Input array: [4, 2, 2, -1, 6]
+    // Output: -1, 3
+    function getMin(arr) {
+      var min = 0;
+      var minInd = 0;
+
+      for (var i = 0; i < arr.length; i++) {
+        if (arr[i] < min) {
+          min = arr[i];
+          minInd = i;
+        }
+      }
+
+      console.log(min + ", " + minInd);
+    }
+    getMin([4, 2, 2, -1, 6]);
+
+    // 4. Write a program that finds the second smallest number and prints out its value.
+    // Input array: [4, 2, 2, -1, 6]
+    // Output: 2
+    function getSecondSmallest(arr) {
+      var smallest = arr[0];
+      var secSmallest = arr[1];
+
+      for (var i = 0; i < arr.length; i++) {
+        if (arr[i] < smallest) {
+          smallest = arr[i];
+        }
+        if (arr[i] > smallest && arr[i] < secSmallest) {
+          secSmallest = arr[i];
+        }
+      }
+      console.log(secSmallest);
+    }
+
+    getSecondSmallest([4, 2, 2, -1, 6]);
+
+    // 5. Write a program that calculates the sum of positive elements in the array.
+    // Input array: [3, 11, -5, -3, 2]
+    // Output: 16
+    function calcPositiveSum(arr) {
+      var sum = 0;
+
+      for (var i = 0; i < arr.length; i++) {
+        if (arr[i] > 0) {
+          sum += arr[i];
+        }
+      }
+
+      console.log(sum);
+    }
+    calcPositiveSum([3, 11, -5, -3, 2]);
+
+    // 6. Write a program that checks if a given array is symmetric. An array is symmetric if it can
+    // be read the same way both from the left and the right hand side.
+    // Input array: [2, 4, -2, 7, -2, 4, 2]
+    // Output: The array is symmetric.
+    // Input array: [3, 4, 12, 8]
+    // Output: The array isn’t symmetric.
+    function isSymmetric(arr) {
+      var result = "";
+      var backwardI = arr.length - 1;
+
+      for (var i = 0; i < arr.length; i++) {
+        if (arr[i] !== arr[backwardI]) {
+          result = "The array isn’t symmetric.";
+        } else {
+          result = "The array is symmetric.";
+        }
+
+        backwardI--;
+      }
+      console.log(result);
+    }
+
+    isSymmetric([2, 4, -2, 7, -2, 4, 2]);
+
+    // 7. Write a program that intertwines two arrays. You can assume the arrays are of the same
+    // length.
+    // Input arrays: [4, 5, 6, 2], [3, 8, 11, 9]
+    // Output array: [4, 3, 5, 8, 6, 11, 2, 9]
+    function intertwineArr(arr1, arr2) {
+      var result = [];
+      var x = 0;
+      var z = 1;
+
+      for (var i = 0; i < arr1.length; i++) {
+        result[x] = arr1[i];
+        result[z] = arr2[i];
+        x += 2;
+        z += 2;
+      }
+      console.log(result);
+    }
+
+    intertwineArr([4, 5, 6, 2], [3, 8, 11, 9]);
+
+    // 8. Write a program that concatenates two arrays.
+    // Input arrays: [4, 5, 6, 2], [3, 8, 11, 9]
+    // Output array: [4, 5, 6, 2, 3, 8, 11, 9]
+    function concArr(arr1, arr2) {
+      var result = [];
+
+      for (var i = 0; i < arr1.length; i++) {
+        result[i] = arr1[i];
+      }
+      for (var j = 0; j < arr2.length; j++) {
+        result[result.length] = arr2[j];
+      }
+
+      console.log(result);
+    }
+    concArr([4, 5, 6, 2], [3, 8, 11, 9]);
+
+    // 9. Write a program that deletes a given element e from the array a.
+    // Input: e = 2, a = [4, 6, 2, 8, 2, 2]
+    // Output array: [4, 6, 8]
+    function deleteEl(el, arr) {
+      var result = [];
+      var resultIndex = 0;
+
+      for (var i = 0; i < arr.length; i++) {
+        if (arr[i] !== el) {
+          result[resultIndex] = arr[i];
+          resultIndex++;
+        }
+      }
+      console.log(result);
+    }
+    deleteEl(2, [4, 6, 2, 8, 2, 2]);
+
+    // 10. Write a program that inserts a given element e on the given position p in the array a.
+    // If the value of the position is greater than the array length, print the error message.
+    // Input: e = 78, p = 3, a = [2, -2, 33, 12, 5, 8]
+    // Output: [2, -2, 33, 78, 12, 5, 8]
+    function insertEl(el, pos, arr) {
+      var result = [];
+
+      if (pos > arr.length) {
+        result = "Error";
+      } else {
+        for (var i = 0; i < arr.length; i++) {
+          if (i !== pos) {
+            result[i] = arr[i];
+          } else {
+            result[i] = el;
+            break;
+          }
+        }
+
+        for (var j = pos + 1; j <= arr.length; j++) {
+          result[j] = arr[j - 1];
+        }
+      } // end else
+
+      console.log(result);
+    }
+    insertEl(78, 3, [2, -2, 33, 12, 5, 8]);
   </script>
 </html>
