--- a/functions.html
+++ b/functions.html
@@ -168,6 +168,8 @@
     // " " -> true
     // 12 -> false
     // false -> false
+    
+    //KOMENTAR: Sta da je string koji proveravas "     "? To je i dalje prazan string, a prikazace ti ga kao False. Kako bi to resio? :) 
     function checkEmpty(p) {
       if (p === "") {
         console.log("True: String is empty.");
@@ -396,6 +398,8 @@
       }
       console.log(result);
     }
+    
+    //KOMENTAR: Lepo si se ovoga setio! :)
 
     humanizeNum(11);
 
@@ -557,6 +561,7 @@
       var counter = 0;
 
       for (var i = 0; i < string.length; i++) {}
+      // KOMENTAR: Ovaj nisi znao da uradis ili si zaboravio?
 
       console.log(result);
     }
