--- a/functions.html
+++ b/functions.html
@@ -920,7 +920,7 @@
     calcFloat([NaN, 23.1, 15, false, -22.5, "", 4, 7, null]);
 
     // EXERCISE 5
-
+    console.log("EXERCISE 5");
     // 1. Find the min and max element in the following array and switch their places.
     // Print out the modified array in the console.
     // Input: [ 3, 500, 12, 149, 53, 414, 1, 19 ]
@@ -1173,6 +1173,7 @@
     greatestCommonDivisor(81, 9);
 
     // EXERCISE 5 A
+    console.log("EXERCISE 5 A");
     // 1. Napisati funkciju u JavaScript-u koja na osnovu niza 6 različitih citata i autora,
     // ispisuje na stranici po jedan citat, ali tako da se citat promeni kada se program pokrene.
     function getQuote(quot, auth) {
@@ -1185,9 +1186,21 @@
     );
 
     // 2. Napisati funkciju koja za godinu (kao ceo pozitivan broj) proverava da li je prestupna.
-    // Godina je prestupna ako je deljiva sa 4 i nije godina veka
-    // (znači ako nije deljiva sa 100 - 1900. nije bila prestupna). Od toga odstupa svaka četvrta
-    // godina veka (znači ako je deljiva sa 400, onda je ipak prestupna - npr. 2000. je prestupna).
+    // Godina je prestupna ako je deljiva sa 4 i nije godina veka (znači ako nije deljiva sa 100 - 1900. nije bila prestupna).
+    // Od toga odstupa svaka četvrta godina veka (znači ako je deljiva sa 400, onda je ipak prestupna - npr. 2000. je prestupna).
+    function isPrestupna(year) {
+      var result = "";
+      if (year % 4 === 0 && year % 100 !== 0) {
+        result = year + " IS prestupna!";
+      } else if (year % 400 === 0) {
+        result = year + " IS prestupna!";
+      } else {
+        result = year + " is NOT prestupna!";
+      }
+      console.log(result);
+    }
+    isPrestupna(2000);
+    isPrestupna(1900);
 
     // 3. Napisati funkciju koja za zadatu reč (ili rečenicu) proverava koliko ima
     // samoglasnika i koliko suglasnika.
@@ -1242,16 +1255,44 @@
     printNumberless(["12bb", "pp", "as23s", "00sd"]);
 
     // 6. Kreirati funkciju koja prima string a kao rezultat ispisuje niz koji u sebi ima:
-    // dužinu stringa, prvi karakter stringa, poslednji karakter, središnji karakter ako
-    // string ima neparan broj znakova odnosno središnja dva karaktera ako ima paran
-    // broj znakova, indeks drugog ponavljanja drugog karaktera u formatu "@ Index # ”
-    // ili “not found” ako nema ponavljanja.
+    // dužinu stringa, prvi karakter stringa, poslednji karakter,
+    // središnji karakter ako string ima neparan broj znakova odnosno središnja dva karaktera ako ima paran broj znakova,
+    // indeks drugog ponavljanja drugog karaktera u formatu "@ Index #" ili "not found" ako nema ponavljanja.
     // Primer 1: "Computer" => [8, "C", "r", "pu", "not found"] ,
     // Primer 2: “Science" => [7, "S", "e", "e", "@ index 5"]
+
+    function printSomething(str) {
+      var result = [str.length, str[0], str[str.length - 1]];
+
+      if (str.length % 2 === 0) {
+        result[3] = str[str.length / 2 - 1] + str[str.length / 2];
+      } else {
+        result[3] = str[Math.floor(str.length / 2)];
+      }
+
+      if (1 === str.lastIndexOf(str[1])) {
+        result.push("Not found");
+      } else {
+        result.push("@ index " + str.lastIndexOf(str[1]));
+      }
+
+      console.log(result);
+    }
+
+    printSomething("Science");
 
     // 7. Dat je ulazni niz [9, 5, 6, 8, 7, 7, 1, 1, 1, 1, 1, 9, 8] gde se svaki element ponavlja
     // bar jednom osim dva elementa. Kreirati funkciju koja ispisuje dva elementa koja
     // se ne ponavljaju.
+
+    function printNoRepeated(arr) {
+      var result = arr.filter(function (el) {
+        return arr.indexOf(el) === arr.lastIndexOf(el);
+      });
+
+      console.log(result);
+    }
+    printNoRepeated([9, 5, 6, 8, 7, 7, 1, 1, 1, 1, 1, 9, 8]);
 
     // 8. Kreirati funkciju koja ulazni niz deli u podnizove duzine N i ispisuje ih.
     // Primer 1: ([2, 3, 4, 5], N=2) => [[2, 3], [4, 5]]
